# bevy_physics_lab

./: Cargo.toml  README.md
src/: main.rs
src/game/: camera.rs  demo_state.rs  game_plugin.rs  mod.rs  player.rs
src/game/physics_demos/: colliders_demo.rs  conveyor_belt_demo.rs  demo_plugin.rs  destructible_demo.rs  home_demo.rs  joint_demo.rs  magnet_demo.rs  mod.rs
